# geopatra

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  pyproject.toml
.github/workflows/: pythonpackage.yml
docs/: Untitled.ipynb  conf.py  geopatra.ipynb  index.rst
docs/_maps/: kepler_map1.html  kepler_map2.html  kepler_map3.html
docs/_static/_maps/: kepler_map1.html  kepler_map2.html  kepler_map3.html
docs/_templates/: hacks.html  sidebarintro.html  sidebarlogo.html
geopatra/: __init__.py  folium.py  map.py
geopatra/folium/: __init__.py  chloropeth.py  choropleth.py  circle.py  geojson.py  heatmap.py  main.py  markercluster.py  utils.py
geopatra/kepler/: __init__.py  geojson.py  utils.py
geopatra/kepler/config/: colors.json  geojson.config
tests/: test_barpatra_folium.py  test_geopatra.py  test_geopatra_folium.py
