[tool.poetry]
name = "geopatra"
version = "0.1.3"
description = "Interactive Maps with Geopandas "
authors = ["sangarshanan <sangarshanan1998@gmail.com>"]

readme = "README.md"

repository = "https://github.com/Sangarshanan/geopatra"
documentation = "https://geopatra.readthedocs.io/"

[tool.poetry.dependencies]
python = "^3.6"
folium = "^0.10.1"
geopandas = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "2.2.1"
ipython = "^7.12.0"
nbsphinx = "^0.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
